# ESP_Components

./: .gitignore  A4988_Driver.c  APA102_Driver.c  APDS9960_Driver.c  BME280_Driver.c  CBuffer_Utils.c  CCS811_Driver.c  CHANGELOG.md  CMakeLists.txt  CircularBuffer.c  DS2321_Driver.c  DoxyBasic  FutabaVFD_Driver.c  HMC5883_Driver.c  Kconfig.projbuild  LSM_Driver.c  LedEffects.c  Lora_SX1276_Driver.c  MFRC522_Driver.c  MSGEQ7_Driver.c  Max30102_Driver.c  PeripheralManager.c  PushButton_Driver.c  README.md  RGB_Driver.c  RotaryEncoder_Driver.c  SSD1306_Driver.c  ST7735_Screen.c  Sim800L_Driver.c  SimpleAnalogInput.c  SystemComponent.c  SystemInterface.c  TouchSenseDriver.c  Utilities.c  VL53L0X_Driver.c  WS2812_Driver.c  genericCommsDriver.c  sdkconfig.old
A4988_Driver/: A4988_Driver.c  A4988_Driver.h  README.md
APA102_Driver/: APA102_Driver.c  APA102_Driver.h  README.md
APDS9960_Driver/: APDS9960_Driver.c  APDS9960_Driver.h  README.md
BME280_Driver/: BME280_Driver.c  BME280_Driver.h  README.md
CBuffer/: CBuffer_Utils.h  CircularBuffer.c
CS811_Driver/: CCS811_Driver.c  CCS811_Driver.h  README.md
Components/: BME280_Driver.c  CMakeLists.txt  WS2812_Driver.c
DS2321_Driver/: DS2321_Driver.c  DS2321_Driver.h  README.md
FutabaVFD_Driver/: FutabaVFD_Driver.c  FutabaVFD_Driver.h  README.md
HMC5885_Driver/: HMC5883_Driver.c  HMC5883_Driver.h  README.md
HPDL1414_Driver/: HPDL1414_Driver.c  HPDL1414_Driver.h  README.md
LSM_Driver/: LSM_Driver.c  LSM_Driver.h  README.md
LedStrip_Driver/: LedEffects.c  LedEffects.h  LedStrip_Driver.c  LedStrip_Driver.h  README.md
LoraSX1276_Driver/: Lora_SX1276_Driver.c  Lora_SX1276_Driver.h  README.md  sx_fsk_definitions.h  sx_lora_definitions.h
MFRC522_Driver/: MFRC522_Driver.c  MFRC522_Driver.h  README.md
MSGEQ7_Driver/: MSGEQ7_Driver.c  MSGEQ7_Driver.h  README.md
Max30102_Driver/: Max30102_Driver.c  Max30102_Driver.h  README.md
OV2640_Driver/: CMakeLists.txt  OV2460_Driver.c  OV2460_Driver.h  OV2640_Driver.c  OV2640_Driver.h
Pushbutton_Driver/: PushButton_Driver.c  PushButton_Driver.h  README.md
RGB_Driver/: README.md  RGB_Driver.c  RGB_Driver.h
RotaryEncoder_Driver/: README.md  RotaryEncoder_Driver.c  RotaryEncoder_Driver.h
SSD1306_Driver/: README.md  SSD1306_Driver.c  SSD1306_Driver.h
ST7735_Driver/: README.md  ST7735_Screen.c
Sim800L_Driver/: README.md  SIM800L_Driver.h
SystemComponent/: README.md  SystemComponent.c
SystermComponent/: README.md
TestComponent/: README.md  TestComponent.c  TestComponent.h
Utils/: LedEffects.c  LedEffects.h  README.md  TouchSenseDriver.c  TouchSenseDriver.h  Utilities.c  Utilities.h  framebuffer.c  framebuffer.h
VEML6070_Driver/: README.md  VEML6070_Driver.c
VL53L0X/: CMakeLists.txt  vl53l0x_api_calibration.c  vl53l0x_api_core.c  vl53l0x_platform.c  vl53l0x_platform_i2c.c
VL53L0X/include/: vl53l0x_api_calibration.h  vl53l0x_api_strings.h  vl53l0x_platform_log.h
VL53L0X_Driver/: README.md  VL53L0X_Driver.c
WS2812B_Driver/: WS2812_Driver.c  WS2812_Driver.h
components/: APA102_Driver.c  APDS9960_Driver.c  API_Manager.c  BME280_Driver.c  CCS811_Driver.c  CMakeLists.txt  DS2321_Driver.c  HPDL1414_Driver.c  LSM_Driver.c  LedEffects.c  Lora_SX1276_Driver.c  MSGEQ7_Driver.c  Max30102_Driver.c  PeripheralManager.c  PushButton_Driver.c  RGB_Driver.c  RotaryEncoder_Driver.c  SSD1306_Driver.c  ST7735_Screen.c  SystemInterface.c  Utilities.c  VL53L0X_Driver.c  WS2812_Driver.c  WifiDriver.c  genericCommsDriver.c  vl53l0x_api.c  vl53l0x_platform.c  vl53l0x_platform_i2c.c  vl53l0x_platform_log.c
components/VL53L0X/: vl53l0x_platform_i2c.c
components/include/: APA102_Driver.h  APDS9960_Driver.h  APIComponentMap.h  API_Manager.h  BME280_Driver.h  CommandAPI.h  DS2321_Driver.h  HPDL1414_Driver.h  LSM_Driver.h  LedEffects.h  Lora_SX1276_Driver.h  PushButton_Driver.h  RGB_Driver.h  RotaryEncoder_Driver.h  SSD1306_Driver.h  ST7735_Screen.h  SysConfig.h  SystemInterface.h  Utilities.h  VL53L0X_Driver.h  WS2812_Driver.h  genericCommsDriver.h  vl53l0x_platform.h  vl53l0x_types.h
html/: A4988__Driver_8h_source.html  APA102__Driver_8h_source.html  APDS9960__Driver_8h_source.html  BME280__Driver_8h_source.html  CBuffer__Utils_8h_source.html  CCS811__Driver_8h_source.html  CircularBuffer_8h_source.html  DS2321__Driver_8h_source.html  FutabaVFD__Driver_8h_source.html  HMC5883__Driver_8h_source.html  HPDL1414__Driver_8h_source.html  LSM__Driver_8h_source.html  LedEffects_8h_source.html  Lora__SX1276__Driver_8h_source.html  MFRC522__Driver_8h_source.html  MSGEQ7__Driver_8h_source.html  Max30102__Driver_8h_source.html  PushButton__Driver_8h_source.html  RGB__Driver_8h_source.html  RotaryEncoder__Driver_8h_source.html  SIM800L__Driver_8h_source.html  SSD1306__Driver_8h_source.html  ST7735__Screen_8h_source.html  SimpleAnalogInput_8h_source.html  SystemComponent_8h_source.html  TouchSenseDriver_8h_source.html  Utilities_8h_source.html  VEML6070__Driver_8h_source.html  VL53L0X__Driver_8h_source.html  WS2812__Driver_8h_source.html  annotated.html  classes.html  dir_000025_000026.html  dir_00982e39376e910dafb584ba6ef70a1e.html  dir_049014b3b6682ec32d4e4a4de6c30267.html  dir_049014b3b6682ec32d4e4a4de6c30267_dep.map  dir_049014b3b6682ec32d4e4a4de6c30267_dep.md5  dir_0a824aa1f70ce3b829ef378253b085da.html  dir_1084a4bc6ce0496f6a72fba50d262607.html  dir_113db0a2834def60be91f432e1296b79.html  (+428 more)
inc/: APIManager.h  BME280_Driver.h  CommandAPI.h  PeripheralManager.h  WifiDriver.h  main.h
include/: A4988_Driver.h  APA102_Driver.h  APDS9960_Driver.h  APIComponentMap.h  BME280_Driver.h  CCS811_Driver.h  CircularBuffer.h  CommandAPI.h  FutabaVFD_Driver.h  HMC5883_Driver.h  HPDL1414_Driver.h  LSM_Driver.h  LedEffects.h  Lora_SX1276_Driver.h  MFRC522_Driver.h  MSGEQ7_Driver.h  Max30102_Driver.h  PushButton_Driver.h  RGB_Driver.h  RotaryEncoder_Driver.h  SSD1306_Driver.h  ST7735_Screen.h  SimpleAnalogInput.h  SystemComponent.h  TouchSenseDriver.h  Utilities.h  VEML6070_Driver.h  VL53L0X_Driver.h  WS2812_Driver.h  font8x8_basic.h  genericCommsDriver.h  sx_lora_definitions.h
latex/: annotated.tex  files.tex  (+214 more)
(+98 files in other folders)
