set(srcs
    "Utils/Utilities.c"
    # "LedEffects.c"
    # "SystemComponent.c"
    # "APA102_Driver/APA102_Driver.c"
    # "APDS9960_Driver.c"
    # "BME280_Driver.c"
    # "CCS811_Driver.c"
    # "DS2321_Driver.c"
    # "HMC5883_Driver.c"
    # "HPDL1414_Driver.c"
    "LedStrip_Driver/LedStrip_Driver.c"
    # "LoraSX1276_Driver/Lora_SX1276_Driver.c"
    # "LSM_Driver/LSM_Driver.c"
    # "Max30102_Driver.c"
    # "MSGEQ7_Driver/MSGEQ7_Driver.c"
    # "PushButton_Driver.c"
    # "RotaryEncoder_Driver.c"
    "SSD1306_Driver/SSD1306_Driver.c"
    # "ST7735_Screen.c"
    # "VL53L0X_Driver.c"
    # "WS2812B_Driver/WS2812_Driver.c"
    # "A4988_Driver.c"
    # "VEML6070_Driver.c"
    # "RGB_Driver/RGB_Driver.c"
    # "CBuffer/CircularBuffer.c"
    # "FutabaVFD_Driver.c"
    # "MFRC522_Driver/MFRC522_Driver.c"
     "TestComponent/TestComponent.c"
     "LedStrip_Driver/LedEffects.c"
     )

set(includes "../main/inc"
             "/home/rich/Tools/ToolChains/ESP/esp-idf/components/esp_http_server/include"
             "/home/rich/Tools/ToolChains/ESP/esp-idf/components/nghttp/port/include"
)

idf_component_register(SRCS "${srcs}"
                    INCLUDE_DIRS ${includes}
                    )